[project]
name = "ronnia"
version = "2.0.0"
description = "Twitch to osu!irc bot"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.11",
    "pydantic>=2.8.2",
    "pymongo>=4.13.0",
    "python-json-logger>=2.0.7",
    "sentry-sdk>=2.10.0",
    "tenacity>=8.5.0",
    "twitchio>=2.10.0",
]
